# Quizzer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.pl.md  main.cpp
res/: example.json
